Modpack-Downloads können nun abgebrochen werden Verbessertes Verhalten beim Starten von nicht-installierten Modpacks Teamspeak Verlinkung auf der Startseite des Launchers Texteingabefelder bei Einstellungen mit numerischem Wert Suche nach Modpackname sowie -version in den Übersichten Vergessene Einstellung hinzugefügt